[project]
name = "nsync-server"
version = "0.5.0"
description = ""
authors = [
    {name = "Paul Bailey", email = "paul@neutron.studio"},
]
dependencies = [
    "dj-database-url~=0.5",
    "graphene-django~=2.15",
    "psycopg2-binary~=2.9",
    "whitenoise~=5.3",
    "django-filter~=2.4",
    "gunicorn~=20.1",
    "django-storages~=1.11",
    "boto3~=1.18",
    "haikunator~=2.1",
    "django-redis~=5.0",
    "django~=3.2",
    "sqlparse~=0.4",
]
requires-python = ">=3.7"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/neutron-sync/nsync-server"


[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
_.env_file = ".env"
manage = "python manage.py"
req = "pdm export -o requirements.txt --without-hashes --prod"
format = "yapf -rpi -vv ."
check_format = "yapf -rpd ."

[tool.pdm.dev-dependencies]
dev = [
    "yapf~=0.31",
]
